# Haejun-ML-projects

./: README.md  pyproject.toml
NLP-DistilBERT/: nlp-disaster-tweet-competition-haejun-oh.ipynb
SparseCNN/data/: sparse_pixel_map.py
SparseCNN/src/SparseCNN.egg-info/: PKG-INFO
SparseCNN/src/SparseCNN/data/: __init__.py
src/SparseCNN/: __init__.py
src/SparseCNN.egg-info/: SOURCES.txt  top_level.txt
src/SparseCNN/models/: __init__.py  fish_block.py  fishnet.py
src/SparseCNN/util/: __init__.py
src/SparseFishNet.egg-info/: SOURCES.txt  top_level.txt
src/SparseFishNet/util/: FocalLoss.py
