[build-system]
requires = ['setuptools']
build-backend = 'setuptools.build_meta'

[project]
name = 'scnn'
version = '0.1.0'
description = 'A Convolutional Neural Network (SCNN) model for neutrino physics'
readme = 'README.md'
requires-python = '>=3.10'
keywords = ['physics', 'neutrino', 'scnn']
classifiers = [
    'Intended Audience :: Science/Research',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.10',
]
dependencies = [
    'torch>=1.12.1',
    'torch-geometric>=2.1.0',
    'pytorch-lightning>=1.7.1',
]

[tool.setuptools.packages.find]
where = ["."]
include = ["SparseCNN"]
